--- a/index.html
+++ b/index.html
@@ -124,9 +124,10 @@ body{
       <!-- Provider List -->
       <div class="provider-list">
         <div class="provider" data-provider="Pragmatic" 
-             data-photos='["foto/pragmatic1.jpg","foto/pragmatic2.jpg"]'>Pragmatic</div>
+     data-photos='["./foto/pragmatic1.jpg","./foto/pragmatic2.jpg"]'>Pragmatic</div>
+
         <div class="provider" data-provider="PG Soft" 
-             data-photos='["foto/pgsoft1.jpg","foto/pgsoft2.jpg"]'>PG Soft</div>
+     data-photos='["./foto/pgsoft1.jpg","./foto/pgsoft2.jpg"]'>PG Soft</div>
       </div>
 
       <!-- Button -->
