--- a/index.html
+++ b/index.html
@@ -123,12 +123,11 @@ body{
       </div>
 
       <!-- Provider List -->
-      <div class="provider-list">
-        <div class="provider" data-provider="Pragmatic" 
-             data-photos='["../foto/pragmatic1.jpg","../foto/pragmatic2.jpg"]'>Pragmatic</div>
+     <div class="provider" data-provider="Pragmatic" 
+     data-photos='["pragmatic1.jpg","pragmatic2.jpg"]'>Pragmatic</div>
 
-        <div class="provider" data-provider="PG Soft" 
-             data-photos='["../foto/pgsoft1.jpg","../foto/pgsoft2.jpg"]'>PG Soft</div>
+<div class="provider" data-provider="PG Soft" 
+     data-photos='["pgsoft1.jpg","pgsoft2.jpg"]'>PG Soft</div>
       </div>
 
       <!-- Button -->
