--- a/index.html
+++ b/index.html
@@ -122,13 +122,17 @@ body{
         <div class="percent-label">Persentase peningkatan</div>
       </div>
 
-      <!-- Provider List -->
-     <div class="provider" data-provider="Pragmatic" 
-     data-photos='["pragmatic1.jpg","pragmatic2.jpg"]'>Pragmatic</div>
+    <!-- Provider List -->
+<div class="provider" data-provider="Pragmatic" 
+     data-photos='[
+       "https://raw.githubusercontent.com/KASINOJP/repo/branch/folder/pragmatic1.jpg",
+       "https://raw.githubusercontent.com/KASINOJP/repo/branch/folder/pragmatic2.jpg"
+     ]'>Pragmatic</div>
 
 <div class="provider" data-provider="PG Soft" 
-     data-photos='["pgsoft1.jpg","pgsoft2.jpg"]'>PG Soft</div>
-      </div>
+     data-photos='[
+       "https://raw.githubusercontent.com/KASINOJP/repo/branch/folder/pgsoft1.jpg",
+C     ]'>PG Soft</div>
 
       <!-- Button -->
       <button id="activateBtn" class="btn">CEK WINRATE PROVIDER</button>
