--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
 :root{
   --bg: #0a0f1c;
-  --panel: rgba(255,255,255,0.05);
+  --panel: rgba(255,255,255,0.07);
   --accent1: #7f5cff; 
   --accent2: #00d4ff;
   --text: #f9f9fb;
@@ -27,8 +27,8 @@ body{
   color:var(--text);
 }
 .card{
-  width:min(520px,90vw);
-  padding:28px;
+  width:min(420px,92vw);
+  padding:24px;
   border-radius:20px;
   background:var(--panel);
   backdrop-filter: blur(16px);
@@ -37,50 +37,72 @@ body{
   text-align:center;
 }
 .title{
-  font-size:24px;
+  font-size:22px;
   font-weight:900;
   text-transform:uppercase;
   background: linear-gradient(90deg,var(--accent2),var(--highlight));
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
-  margin-bottom:12px;
+  margin-bottom:10px;
 }
 .subtitle{
   font-size:14px;
   color:var(--muted);
-  margin-bottom:18px;
+  margin-bottom:20px;
 }
+
+/* Input User */
+#userIdInput {
+  width: 100%;
+  padding: 12px;
+  border-radius: 12px;
+  border: 1px solid var(--accent2);
+  background: rgba(255,255,255,0.08);
+  color: var(--text);
+  font-size: 15px;
+  outline: none;
+  text-align: center;
+  margin-bottom: 15px;
+}
+
 .center-area{
   display:flex;
   flex-direction:column;
   align-items:center;
   gap:20px;
 }
+
 .percent-wrap{
   width:100%;
-  max-width:320px;
   background:var(--glass);
   border-radius:16px;
   padding:20px;
   text-align:center;
 }
 .big-percent{
-  font-size:40px;
+  font-size:38px;
   font-weight:900;
   background: linear-gradient(90deg,var(--accent2),var(--highlight));
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
 }
+.user-result{
+  font-size:14px;
+  color:var(--highlight);
+  margin-bottom:6px;
+}
+
 .provider-list{
   display:flex;
-  gap:10px;
+  flex-wrap: wrap;
+  gap:8px;
   justify-content:center;
-  margin-top:15px;
+  margin-top:10px;
 }
 .provider{
-  padding:6px 12px;
+  padding:8px 16px;
   border-radius:10px;
-  font-size:13px;
+  font-size:14px;
   background:var(--glass);
   cursor:pointer;
   transition:.2s;
@@ -90,6 +112,12 @@ body{
   color:#000;
   font-weight:600;
 }
+.provider.active {
+  background:var(--accent2);
+  color:#000;
+  font-weight:600;
+}
+
 .photo-container{
   margin-top:20px;
 }
@@ -99,6 +127,7 @@ body{
   box-shadow:0 0 20px rgba(0,0,0,0.3);
   transition:opacity 0.6s ease;
 }
+
 .btn{
   margin-top:20px;
   background:linear-gradient(90deg,var(--accent1),var(--accent2));
@@ -108,37 +137,71 @@ body{
   color:white;
   font-weight:700;
   cursor:pointer;
+  width: 100%;
+}
+
+.login-btn{
+  margin-top:18px;
+  display:inline-block;
+  text-decoration:none;
+  padding:10px 20px;
+  border-radius:12px;
+  background: linear-gradient(90deg, var(--highlight), var(--accent2));
+  color:#000;
+  font-weight:700;
+  width: 100%;
+}
+
+@media(max-width:480px){
+  .card{
+    padding:20px;
+  }
+  .title{
+    font-size:20px;
+  }
+  .big-percent{
+    font-size:32px;
+  }
 }
 </style>
 </head>
 <body>
   <div class="card">
     <div class="title">SERVER KASINOJP AUTO WIN</div>
-    <div class="subtitle">Pilih provider favorit kamu lalu cek <b>WINRATE</b>!</div>
+    <div class="subtitle">Masukkan User ID, pilih provider, lalu cek <b>WINRATE</b>!</div>
+
+    <!-- Input User ID -->
+    <input type="text" id="userIdInput" placeholder="Masukkan User ID kamu">
 
     <div class="center-area">
       <div class="percent-wrap">
+        <div class="user-result" id="userResult"></div>
         <div class="big-percent" id="percent">0%</div>
         <div class="percent-label">Persentase peningkatan</div>
       </div>
 
-    <!-- Provider List -->
-<div class="provider" data-provider="Pragmatic" 
-     data-photos='[
-       "https://raw.githubusercontent.com/KASINOJP/repo/branch/folder/pragmatic1.jpg",
-       "https://raw.githubusercontent.com/KASINOJP/repo/branch/folder/pragmatic2.jpg"
-     ]'>Pragmatic</div>
+      <!-- Provider List -->
+      <div class="provider-list">
+        <div class="provider" data-provider="Pragmatic" 
+          data-photos='[
+            "https://raw.githubusercontent.com/KASINOJP/repo/branch/folder/pragmatic1.jpg",
+            "https://raw.githubusercontent.com/KASINOJP/repo/branch/folder/pragmatic2.jpg"
+          ]'>Pragmatic</div>
 
-<div class="provider" data-provider="PG Soft" 
-     data-photos='[
-       "https://raw.githubusercontent.com/KASINOJP/repo/branch/folder/pgsoft1.jpg",
-C     ]'>PG Soft</div>
+        <div class="provider" data-provider="PG Soft" 
+          data-photos='[
+            "https://raw.githubusercontent.com/KASINOJP/repo/branch/folder/pgsoft1.jpg"
+          ]'>PG Soft</div>
+      </div>
 
-      <!-- Button -->
+      <!-- Tombol Cek -->
       <button id="activateBtn" class="btn">CEK WINRATE PROVIDER</button>
 
-      <!-- Tempat Foto muncul -->
+      <!-- Tempat Foto -->
       <div class="photo-container" id="photoContainer"></div>
+
+      <!-- Tombol Login -->
+      <a href="https://link-tujuan-login.com" class="login-btn">LOGIN SEKARANG</a>
     </div>
   </div>
 
@@ -147,28 +210,40 @@ C     ]'>PG Soft</div>
   const percentEl = document.getElementById("percent");
   const activateBtn = document.getElementById("activateBtn");
   const photoContainer = document.getElementById("photoContainer");
+  const userResult = document.getElementById("userResult");
+  const userIdInput = document.getElementById("userIdInput");
+
   let selectedProvider = null;
   let selectedPhotos = [];
-  let slideshowTimer = null;
+  let photoShown = false;
 
   // pilih provider
   document.querySelectorAll(".provider").forEach(p=>{
     p.addEventListener("click", ()=>{
-      document.querySelectorAll(".provider").forEach(x=>x.style.background="var(--glass)");
-      p.style.background="var(--accent2)";
+      document.querySelectorAll(".provider").forEach(x=>x.classList.remove("active"));
+      p.classList.add("active");
       selectedProvider = p.dataset.provider;
       selectedPhotos = JSON.parse(p.dataset.photos);
+      photoShown = false;
     });
   });
 
   // cek winrate
   activateBtn.onclick=()=>{
+    const userId = userIdInput.value.trim();
+    if(!userId){
+      alert("Masukkan User ID terlebih dahulu!");
+      return;
+    }
     if(!selectedProvider){
       alert("Pilih provider dulu!");
       return;
     }
+
     let target = Math.floor(Math.random()*6)+93; // 93-98%
     let count=0;
+    userResult.textContent = "Hasil untuk user: " + userId;
+
     let timer = setInterval(()=>{
       count++;
       percentEl.textContent = count+"%";
@@ -176,14 +251,11 @@ C     ]'>PG Soft</div>
         clearInterval(timer);
         percentEl.textContent = target+"% ("+selectedProvider+")";
 
-        // slideshow foto
-        let idx = 0;
-        photoContainer.innerHTML = `<img src="${selectedPhotos[idx]}" alt="Foto ${selectedProvider}">`;
-        if(slideshowTimer) clearInterval(slideshowTimer);
-        slideshowTimer = setInterval(()=>{
-          idx = (idx+1) % selectedPhotos.length;
-          photoContainer.innerHTML = `<img src="${selectedPhotos[idx]}" alt="Foto ${selectedProvider}">`;
-        }, 2000); // ganti tiap 2 detik
+        // tampilkan foto sekali saja
+        if (!photoShown) {
+          photoContainer.innerHTML = `<img src="${selectedPhotos[0]}" alt="Foto ${selectedProvider}">`;
+          photoShown = true;
+        }
       }
     },40);
   };
