--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ body{
       <div class="photo-container" id="photoContainer"></div>
 
       <!-- Tombol Login -->
-      <a href="https://link-tujuan-login.com" class="login-btn">LOGIN SEKARANG</a>
+      <a href="https://heylink.me/kasinojp-ku/" class="login-btn">LOGIN SEKARANG</a>
     </div>
   </div>
 
