--- a/index.html
+++ b/index.html
@@ -182,16 +182,16 @@ body{
 
       <!-- Provider List -->
       <div class="provider-list">
-      <div class="provider" data-provider="Pragmatic" 
-  data-photos='[
-    "https://raw.githubusercontent.com/KASINOJP/repo/main/folder/pragmatic1.jpg",
-    "https://raw.githubusercontent.com/KASINOJP/repo/main/folder/pragmatic2.jpg"
-  ]'>Pragmatic</div>
+        <div class="provider" data-provider="Pragmatic" 
+          data-photos='[
+            "https://raw.githubusercontent.com/KASINOJP/repo/main/pragmatic1.jpg",
+            "https://raw.githubusercontent.com/KASINOJP/repo/main/pragmatic2.jpg"
+          ]'>Pragmatic</div>
 
-<div class="provider" data-provider="PG Soft" 
-  data-photos='[
-    "https://raw.githubusercontent.com/KASINOJP/repo/main/folder/pgsoft1.jpg"
-  ]'>PG Soft</div>
+        <div class="provider" data-provider="PG Soft" 
+          data-photos='[
+            "https://raw.githubusercontent.com/KASINOJP/repo/main/pgsoft1.jpg"
+          ]'>PG Soft</div>
       </div>
 
       <!-- Tombol Cek -->
@@ -252,9 +252,11 @@ body{
         percentEl.textContent = target+"% ("+selectedProvider+")";
 
         // tampilkan foto sekali saja
-        if (!photoShown) {
+        if (!photoShown && selectedPhotos.length > 0) {
           photoContainer.innerHTML = `<img src="${selectedPhotos[0]}" alt="Foto ${selectedProvider}">`;
           photoShown = true;
+        } else if(selectedPhotos.length === 0){
+          photoContainer.innerHTML = `<p style="color:var(--muted)">Foto tidak tersedia</p>`;
         }
       }
     },40);
